              scaled.  Broken in Netpbm 10.34 (June 2006) or 10.35 (August
              2006).

              pbmtonokia: Fix incorrect output with -txt option.

              pbmtonokia: Fix incorrect output with newer compiler.

              pnmtorle: Fix incorrect command and filename in header.
              Broken in Netpbm 10.88 (September 2019).

              cameratopam: Fix undefined behavior using 'swab' to swap bytes
              in place.

              ppmtompeg: Fix buffer overruns with very long names in input
              parameter files.  Always broken.  Ppmtompeg was new in
              Netpbm 8.4 (April 2000).

              ximtoppm: Fix possible program crash due to invalid memory
              reference.  Always broken.  ximtoppm was in primordial Netpbm,
              ca 1989.

20.03.26 BJH  Release 10.90.00

              pamundice: Add -listfile.

              pamditherbw: Remove restriction to 2^18 pixels width and height
              for -hilbert .

              pamundice: Add error and warning messages for insane file name
              pattern.

              pamcut: Improve error messages for legacy command line
              arguments.

              pbmtopgm: Fix incorrect output when convolution area is not
              square.  Always broken.  pbmtopgm was in primordial Netpbm,
              ca 1991.

              pbmtopgm: Fix crash when convolution matrix too large for word
              size.  Always broken.  pbmtopgm was in primordial Netpbm, ca
              1991.

              pnmshear: Fix arithmetic overflow with shear angle near +/- 90
              degrees.  Always broken; pnmshear was in primordial Netpbm,
              ca. 1989.

              pnmshear: Fix shearing direction for angles larger than 90
              degrees.  Always broken; pnmshear was in primordial Netpbm,
              ca. 1989.

              pamditherbw: Fix bug: issue error message instead of just